2002-03-08  Neil Jerram  <neil@ossau.uklinux.net>

	* debug.h (SCM_MAX_FRAME_SIZE): Remove incorrect comment about use
	of SCM_MAX_FRAME_SIZE as a bit mask; it isn't used like this.

	* eval.c (SCM_CEVAL): Don't store scm_debug_eframe_size in
	debug.status.  It isn't needed, and it can overflow the bits
	reserved for it (which may lead to a segv or a GC abort).

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'apply'.  Removed
	side-effecting operations from conditions and macro calls.
	Replaced SCM_N?IMP by a more explicit predicate in some places.
	Minimized the scope of some variables.

2002-03-02  Stefan Jahn  <stefan@lkcc.org>

	* convert.i.c: Fixed int <-> long conversions which would have
	failed if their sizes were different.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'if', 'let',
	'letrec' and 'set*': Removed some uses of t.arg1, t.lloc and proc
	as temporary variables.  Removed side-effecting operations from
	conditions and macro calls.  Introduced temporary variables with
	hopefully descriptive names for clarification.  Replaced SCM_N?IMP
	by a more explicit predicate in some places.  Removed code that
	was conditionally compiled if SICP was defined - which it never
	is.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (SCM_CEVAL): Cleaned up the handling of 'cons' and 'do':
	Removed some uses of t.arg1 and proc as temporary variables.
	Removed side-effecting operations from conditions and macro calls.
	Introduced temporary variables with hopefully descriptive names
	for clarification.  Replaced SCM_N?IMP by a more explicit
	predicate in some places.

2002-03-02  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* eval.c (scm_badargsp, SCM_CEVAL): Replaced SCM_N?IMP by a more
	explicit predicate in some places.

	(CHECK_EQVISH): Removed.

	(SCM_CEVAL): Removed some uses of t.arg1 and proc as temporary